[package]
name = "cmd"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false
default-run = "einsteindb-server"

[features]
tcmalloc = ["einsteindb/tcmalloc"]
jemalloc = ["einsteindb/jemalloc"]
mimalloc = ["einsteindb/mimalloc"]
porBlock = ["einsteindb/porBlock"]
sse = ["einsteindb/sse"]
mem-profiling = ["einsteindb/mem-profiling"]
failpoints = ["einsteindb/failpoints"]
protobuf-codec = [
  "backup/protobuf-codec",
  "grpcio/protobuf-codec",
  "tuplespaceInstanton/protobuf-codec",
  "ekvproto/protobuf-codec",
  "fidel_client/protobuf-codec",
  "violetabft/protobuf-codec",
  "violetabftstore/protobuf-codec",
  "einsteindb/protobuf-codec",
  "txn_types/protobuf-codec",
  "cdc/protobuf-codec",
  "violetabft_log_engine/protobuf-codec"
]
prost-codec = [
  "backup/prost-codec",
  "grpcio/prost-codec",
  "tuplespaceInstanton/prost-codec",
  "ekvproto/prost-codec",
  "fidel_client/prost-codec",
  "violetabft/prost-codec",
  "violetabftstore/prost-codec",
  "einsteindb/prost-codec",
  "txn_types/prost-codec",
  "cdc/prost-codec",
  "violetabft_log_engine/prost-codec"
]

[lib]
name = "cmd"

[[bin]]
name = "einsteindb-server"

[[bin]]
name = "einsteindb-ctl"

[deplightlikeencies]
backup = { path = "../components/backup", default-features = false }
cdc = { path = "../components/cdc" }
chrono = "0.4"
clap = "2.32"
concurrency_manager = { path = "../components/concurrency_manager" }
encryption = { path = "../components/encryption" }
engine_lmdb = { path = "../components/engine_lmdb" }
engine_promises = { path = "../components/engine_promises" }
error_code = { path = "../components/error_code" }
fs2 = "0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["rt-threaded"] }
grpcio = { version = "0.6", default-features = false, features = ["openssl-vlightlikeored"] }
hex = "0.4"
tuplespaceInstanton = { path = "../components/tuplespaceInstanton" }
ekvproto = { git = "https://github.com/whtcorpsinc/ekvproto.git", default-features = false }
libc = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
nix = "0.11"
fidel_client = { path = "../components/fidel_client" }
prometheus = { version = "0.8", features = ["nightly", "push"] }
promptly = "0.3.0"
protobuf = "2.8"
violetabft = { version = "0.6.0-alpha", default-features = false }
violetabft_log_engine = { path = "../components/violetabft_log_engine" }
violetabftstore = { path = "../components/violetabftstore" }
rand = "0.7"
security = { path = "../components/security" }
serde_json = "1.0"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
einsteindb = { path = "../", default-features = false }
einsteindb_alloc = { path = "../components/einsteindb_alloc" }
einsteindb_util = { path = "../components/einsteindb_util" }
toml = "0.4"
txn_types = { path = "../components/txn_types" }
vlog = "0.1.4"

[deplightlikeencies.yatp]
git = "https://github.com/einsteindb/yatp.git"

[target.'causetg(unix)'.deplightlikeencies]
signal = "0.6"
