[package]
name = "einsteindb_alloc"
version = "0.1.0"
edition = "2018"
authors = ["Brian Anderson <andersrb@gmail.com>"]
publish = false

[features]
jemalloc = ["einsteindb-jemallocator", "einsteindb-jemalloc-ctl", "einsteindb-jemalloc-sys"]

# Build jemalloc's profiling features. Without this
# certain profile functions will return nothing.
mem-profiling = ["einsteindb-jemallocator/profiling", "log"]
mimalloc = ["mimallocator"]

[deplightlikeencies]
libc = "0.2"
log = { version = "0.4", optional = true }
lazy_static = "1.3"

[dev-deplightlikeencies]
tempfile = "3.0"

[deplightlikeencies.einsteindb-jemallocator]
version = "0.4.0"
optional = true
features = ["unprefixed_malloc_on_supported_platforms", "stats"]

[deplightlikeencies.einsteindb-jemalloc-sys]
version = "0.4.0"
optional = true
features = ["stats"]

[deplightlikeencies.einsteindb-jemalloc-ctl]
version = "0.4.0"
optional = true

[deplightlikeencies.tcmalloc]
version = "0.3.0"
optional = true
features = ["bundled"]

[deplightlikeencies.mimallocator]
version = "0.1.3"
optional = true
