[package]
name = "violetabftstore"
version = "0.0.1"
authors = ["The EinsteinDB Authors"]
license = "Apache-2.0"
edition = "2018"
publish = false

[features]
failpoints = ["fail/failpoints"]
prost-codec = [
  "prost",
  "engine_lmdb/prost-codec",
  "into_other/prost-codec",
  "tuplespaceInstanton/prost-codec",
  "ekvproto/prost-codec",
  "violetabft/prost-codec",
  "fidel_client/prost-codec",
  "sst_importer/prost-codec",
  "milevadb_query_datatype/prost-codec",
  "txn_types/prost-codec",
]
protobuf-codec = [
  "engine_lmdb/protobuf-codec",
  "into_other/protobuf-codec",
  "tuplespaceInstanton/protobuf-codec",
  "ekvproto/protobuf-codec",
  "violetabft/protobuf-codec",
  "fidel_client/protobuf-codec",
  "sst_importer/protobuf-codec",
  "milevadb_query_datatype/protobuf-codec",
  "txn_types/protobuf-codec",
]
testexport = []

[dependencies]
batch-system = { path = "../batch-system" }
bitflags = "1.0.1"
byteorder = "1.2"
interlocking_directorate = { path = "../interlocking_directorate" }
configuration = { path = "../configuration" }
crc32fast = "1.2"
crossbeam = "0.7.2"
engine_lmdb = { path = "../engine_lmdb" }
encryption = { path = "../encryption" }
edb = { path = "../edb" }
error_code = { path = "../error_code" }
fail = "0.3"
openssl = "0.10"
fs2 = "0.4"
futures = "0.3"
futures-util = { version = "0.3.1", default-features = false, features = ["io"] }
hex = "0.4"
into_other = { path = "../into_other" }
tuplespaceInstanton = { path = "../tuplespaceInstanton" }
ekvproto = { git = "https://github.com/whtcorpsinc/ekvproto.git", default-features = false }
lazy_static = "1.3"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
log_wrappers = { path = "../log_wrappers" }
fidel_client = { path = "../fidel_client" }
prometheus = { version = "0.8", features = ["nightly", "push"] }
prost = { version = "0.6", optional = true }
protobuf = "2.8"
quick-error = "1.2.3"
violetabft = { version = "0.6.0-alpha", default-features = false }
violetabft-proto = { git = "https://github.com/whtcorpsinc/violetabft-rs", branch = "master", default-features = false }
rand = "0.7.3"
serde = "1.0"
serde_derive = "1.0"
serde_with = "1.4"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
smallvec = "1.4"
sst_importer = { path = "../sst_importer" }
tempfile = "3.0"
milevadb_query_datatype = { path = "../milevadb_query_datatype" }
edb_alloc = { path = "../edb_alloc" }
violetabftstore::interlock:: = { path = "../violetabftstore::interlock::" }
time = "0.1"
tokio = { version = "0.2", features = ["sync", "rt-threaded"] }
txn_types = { path = "../txn_types" }
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dependencies.prometheus-static-metric]
git = "https://github.com/edb/rust-prometheus.git"
rev = "fd122caa03de8e7e5e4fae9372583aebf19e39f6"

[dependencies.yatp]
git = "https://github.com/edb/yatp.git"

[dev-dependencies]
panic_hook = { path = "../panic_hook" }
test_sst_importer = { path = "../test_sst_importer" }
engine_panic = { path = "../engine_panic" }
