[package]
name = "causetq_allegrosql"
version = "0.0.1"
workspace = ".."

[dependencies]

[dependencies.edbn]
path = "..edb/edbn"

[dependencies.embedded_promises]
path = "../embedded-promises"

[dependencies.einsteindb-prod_embedded]
path = "../embedded"

[dependencies.einsteindb-prod_sql]
path = "../allegrosql"

[dependencies.allegrosql_promises]
path = "../allegrosql-promises"

[dependencies.einsteindb-prod_causetq_parityfilter]
path = "../causetq-parityfilter"
