[package]
name = "causetq_allegrosql"
version = "0.0.1"
workspace = ".."

[dependencies]

[dependencies.edbn]
path = "..edb/edbn"

[dependencies.raum_promises]
path = "../raum-promises"

[dependencies.edb_raum]
path = "../raum"

[dependencies.edb_sql]
path = "../allegrosql"

[dependencies.allegrosql_promises]
path = "../allegrosql-promises"

[dependencies.edb_causetq_parityfilter]
path = "../causetq-parityfilter"
