[package]
name = "causetq_parityfilter_promises"
version = "0.0.1"
workspace = ".."

[lib]
name = "causetq_parityfilter_promises"
path = "lib.rs"

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.edbn]
path = "../edbn"

[dependencies.allegrosql_promises]
path = "../allegro-promises"
