[package]
name = "causetq-parityfilter"
version = "0.0.1"
workspace = ".."

[dependencies]
failure = "0.1.1"

[dependencies.edbn]
path = "../edbn"

[dependencies.edb_raum]
path = "../raum"

[dependencies.raum_promises]
path = "../raum-promises"

[dependencies.causetq_parityfilter_promises]
path = "../causetq-parityfilter-promises"

[dev-dependencies]
itertools = "0.7"
