[package]
name = "causetq_parityfilter"
version = "0.0.1"
workspace = ".."

[dependencies]
failure = "0.1.1"

[dependencies.edbn]
path = "../edbn"

[dependencies.causetq_allegrosql]
path = "../allegro"

[dependencies.allegrosql_promises]
path = "../allegro-promises"

[dependencies.causetq_parityfilter_promises]
path = "../causetq-parityfilter-promises"

[dev-dependencies]
itertools = "0.7"
