[package]
name = "causetq_pull_promises"
version = "0.0.1"
workspace = ".."

[lib]
name = "causetq_pull_promises"
path = "lib.rs"

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.allegro_promises]
path = "../allegro-promises"

[dependencies.causetq_pull_promises]
path = "../edb-promises"
