[package]
name = "causetq_pull"
version = "0.0.1"
workspace = ".."

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
failure = "0.1.1"

[dependencies.causetq_pull_promises]
path = "../causetq-pull-promises"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]

[dependencies.edbn]
path = "..edb/edbn"

[dependencies.edb_allegro]
path = "../allegro"

[dependencies.allegro_promises]
path = "../allegro-promises"

[dependencies.einstein_db]
path = "../edb"
