[package]
name = "edb_causetq_projector"
version = "0.0.1"
workspace = ".."

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
failure = "0.1.1"
indexmap = "1"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]

[dependencies.raum_promises]
path = "../raum-promises"

[dependencies.edbn]
path = "../edbn"

[dependencies.edb_raum]
path = "../raum"

[dependencies.einstein_db]
path = "../edb"

[dependencies.edb_promises]
path = "../edb-promises"

[dependencies.edb_causetq_parityfilter]
path = "../causetq-parityfilter"

[dependencies.edb_causetq_pull]
path = "../causetq-pull"

[dependencies.causetq_pull_promises]
path = "../causetq-pull-promises"

[dependencies.causetq_projector_promises]
path = "../causetq-projector-promises"

[dependencies.edb_causetq_sql]
path = "../causetq-allegrosql"

[dev-dependencies.edb_sql]
path = "../allegrosql"
